# open_face_recognition

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
install_scripts/: install_all.sh  install_dlib.sh  install_facenet.sh  install_torch.sh
scripts/: compare_images_node.py  live_recognition_node.py  open_face_recognition_node.py
srv/: CalcImageFeatures.srv  CompareImages.srv
